--- a/tests/Load_TDMS_raw.ipynb
+++ b/tests/Load_TDMS_raw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -51,35 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[15.847611 16.624392 16.950584 16.9443   16.942226 16.943878 16.945587\n",
-      " 16.95111  16.94917  16.945236 16.950302 16.945389 16.945179 16.942831\n",
-      " 16.943993 16.95038  16.94652  16.944551 16.943066 16.945429 16.945261\n",
-      " 16.945368 16.945742 16.943792 16.94656  16.943192 16.947432 16.944065\n",
-      " 16.944963 16.943758 16.947475 16.945644 16.945553 16.945438 16.946281\n",
-      " 16.949127 16.944056 16.949541 16.946938 16.942926 16.946592 16.94462\n",
-      " 16.948936 16.944956 16.945934 16.94634  16.943321 16.946047 16.948133\n",
-      " 16.9474   16.94599  16.947645 16.945852 16.946878 16.947456 16.944849\n",
-      " 16.943537 16.947542 16.94774  16.9425   16.945543 16.945322 16.947008\n",
-      " 16.94935  16.945791 16.943306 16.947536 16.944893 16.945923 16.94769\n",
-      " 16.942017 16.94534  16.949484 16.945438 16.951033 16.941177 16.944674\n",
-      " 16.945318 16.943895 16.94566  16.9457   16.946512 16.942461 16.945282\n",
-      " 16.94515  16.94376  16.946709 16.943485 16.947252 16.946718 16.948917\n",
-      " 16.943125 16.947662 16.947742 16.946012 16.949203 16.944242 16.947273\n",
-      " 16.945051 16.944489 16.944914 16.944633 16.94497  16.945526 16.944054\n",
-      " 16.945572 16.945593 16.945555 16.944897 16.946213 16.94488  16.94546\n",
-      " 16.949877 16.943005 16.948105 16.945257 16.947113 16.946606 16.94432\n",
-      " 16.946629 16.947945 16.945335 16.948812 16.942472 16.94691  16.942753\n",
-      " 16.94623  16.947718 16.94253  16.947397 16.945211 16.945292 16.942081\n",
-      " 16.944958 16.943096 16.947126 16.94538  16.950836 16.949286 16.946629\n",
-      " 16.947176 16.949017 16.944796 16.950558 16.945312 16.946285 16.94417\n",
-      " 16.945192 16.945593 16.944513]\n"
+      "[0.00599781 0.00599756 0.00599771 ... 0.00031587 0.00031568 0.00031572]\n"
      ]
     }
    ],
@@ -88,7 +67,7 @@
     "\n",
     "test_file_path = nb_path \n",
     "#data in the folder, e.g.\n",
-    "tdms_file = TdmsFile.read(\"data/Steps_102346.tdms\")\n",
+    "tdms_file = TdmsFile.read(\"c:/temp/Steps_134427.tdms\")\n",
     "tdms_file_groups = tdms_file.groups()\n",
     "tdms_file_df = tdms_file.as_dataframe()\n",
     "\n",
@@ -118,7 +97,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pack_path = nb_path.parent / \"src\" / \"ArenzGroupPython\"\n",
+    "print(nb_path.parent)\n",
+    "print(pack_path)\n",
+    "print(f\"path existits: {pack_path.exists()}\")\n",
+    "\n",
+    "str_path = str(pack_path)\n",
+    "#sys.path.append(\"C:/Users/gustav.wiberg/Documents/GitHub/Python/Arenz_Group_Python/src/ArenzGroupPython\")\n",
+    "print(str_path)\n",
+    "sys.path.append(str_path)\n",
+    "#import ec_data\n",
+    "#ec_data.reload()\n",
+    "from ec_data import EC_Data\n"
+   ]
   }
  ],
  "metadata": {
