--- a/tests/Look_for_packages.ipynb
+++ b/tests/Look_for_packages.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'pandas' already in sys.modules\n",
+      "'pandas' has been imported\n",
       "'numpy' already in sys.modules\n",
-      "'nptdms' already in sys.modules\n",
-      "'matplotlib' already in sys.modules\n",
+      "'nptdms' has been imported\n",
+      "'matplotlib' has been imported\n",
       "'pathlib' already in sys.modules\n"
      ]
     }
@@ -39,6 +39,24 @@
     "        print(f\"{name!r} has been imported\")\n",
     "    else:\n",
     "        print(f\"can't find the {name!r} module\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from setuptools import setup, find_packages\n",
+    "print(find_packages(\"src\"))"
    ]
   },
   {
