--- a/tests/Load_TDMS_raw.ipynb
+++ b/tests/Load_TDMS_raw.ipynb
@@ -109,7 +109,7 @@
     "sys.path.append(str_path)\n",
     "#import ec_data\n",
     "#ec_data.reload()\n",
-    "from ec_data import EC_Data\n"
+    "from anyt import EC_Data\n"
    ]
   }
  ],
