--- a/tests/Look_for_packages.ipynb
+++ b/tests/Look_for_packages.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'pandas' has been imported\n",
+      "'pandas' already in sys.modules\n",
       "'numpy' already in sys.modules\n",
-      "'nptdms' has been imported\n",
-      "'matplotlib' has been imported\n",
+      "'nptdms' already in sys.modules\n",
+      "'matplotlib' already in sys.modules\n",
       "'pathlib' already in sys.modules\n"
      ]
     }
@@ -43,20 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['ec_data', 'src']\n"
      ]
     }
    ],
    "source": [
     "from setuptools import setup, find_packages\n",
-    "print(find_packages(\"src\"))"
+    "print(find_packages(\"..\"))"
    ]
   },
   {
