--- a/tests/Load_TDMS.ipynb
+++ b/tests/Load_TDMS.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "#add\n",
     "sys.path.insert(0,pack_path)\n",
-    "from ec_data import EC_Data"
+    "from anyt import EC_Data"
    ]
   },
   {
@@ -90,7 +90,7 @@
     "sys.path.append(str_path)\n",
     "#import ec_data\n",
     "#ec_data.reload()\n",
-    "from ec_data import EC_Data\n",
+    "from anyt import EC_Data\n",
     "\n"
    ]
   },
