--- a/tests/Load_TDMS_makePlots.ipynb
+++ b/tests/Load_TDMS_makePlots.ipynb
@@ -13,7 +13,7 @@
     "sys.path.append(str(pack_path))\n",
     "#import ec_data\n",
     "#ec_data.reload()\n",
-    "from ec_data import EC_Data"
+    "from anyt import EC_Data"
    ]
   },
   {
