--- a/tests/Packages/Look_for_packages.ipynb
+++ b/tests/Packages/Look_for_packages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -43,20 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ec_data', 'src']\n"
+      "['arenz_group_python', 'arenz_group_python.ec_data']\n"
      ]
     }
    ],
    "source": [
     "from setuptools import setup, find_packages\n",
-    "print(find_packages(\"..\"))"
+    "print(find_packages(\"../src\"))"
    ]
   },
   {
