--- a/tests/Packages/Test_install.ipynb
+++ b/tests/Packages/Test_install.ipynb
@@ -11,17 +11,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!{sys.executable} -m pip install arenz_group_python @ "
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gusta\\appdata\\local\\temp\\pip-install-g9zf9_j9\\arenz-group-python_fb481cfa03514b14abba11ed47bb766f\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 2ead9d62021997e187caa9ac508ffe0d3b358512\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-install-g9zf9_j9\\arenz-group-python_fb481cfa03514b14abba11ed47bb766f'\n",
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × Getting requirements to build wheel did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [8 lines of output]\n",
+      "      running egg_info\n",
+      "      creating Arenz_Group_Python.egg-info\n",
+      "      writing Arenz_Group_Python.egg-info\\PKG-INFO\n",
+      "      writing dependency_links to Arenz_Group_Python.egg-info\\dependency_links.txt\n",
+      "      writing requirements to Arenz_Group_Python.egg-info\\requires.txt\n",
+      "      writing top-level names to Arenz_Group_Python.egg-info\\top_level.txt\n",
+      "      writing manifest file 'Arenz_Group_Python.egg-info\\SOURCES.txt'\n",
+      "      error: package directory 'arenz_group_python' does not exist\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: subprocess-exited-with-error\n",
+      "\n",
+      "× Getting requirements to build wheel did not run successfully.\n",
+      "│ exit code: 1\n",
+      "╰─> See above for output.\n",
+      "\n",
+      "note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.3.2 -> 24.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!{sys.executable} -m pip install arenz_group_python@git+https://github.com/Guswib/Arenz_Group_Python"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
