--- a/tests/Packages/Test_install.ipynb
+++ b/tests/Packages/Test_install.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -28,8 +28,8 @@
      "output_type": "stream",
      "text": [
       "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gusta\\appdata\\local\\temp\\pip-install-g9zf9_j9\\arenz-group-python_fb481cfa03514b14abba11ed47bb766f\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 2ead9d62021997e187caa9ac508ffe0d3b358512\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gusta\\appdata\\local\\temp\\pip-install-zlcn6lnw\\arenz-group-python_7c422cd7b9df4ccea8dd204b94306b98\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 6c26f44eee4823c99f3447706a8d73c8433eb413\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
       "  Getting requirements to build wheel: started\n",
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-install-g9zf9_j9\\arenz-group-python_fb481cfa03514b14abba11ed47bb766f'\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gusta\\AppData\\Local\\Temp\\pip-install-zlcn6lnw\\arenz-group-python_7c422cd7b9df4ccea8dd204b94306b98'\n",
       "  error: subprocess-exited-with-error\n",
       "  \n",
       "  × Getting requirements to build wheel did not run successfully.\n",
@@ -53,7 +53,7 @@
       "      writing requirements to Arenz_Group_Python.egg-info\\requires.txt\n",
       "      writing top-level names to Arenz_Group_Python.egg-info\\top_level.txt\n",
       "      writing manifest file 'Arenz_Group_Python.egg-info\\SOURCES.txt'\n",
-      "      error: package directory 'arenz_group_python' does not exist\n",
+      "      error: package directory 'srcrenz_group_python' does not exist\n",
       "      [end of output]\n",
       "  \n",
       "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
