--- a/tests/Packages/Look_for_packages.ipynb
+++ b/tests/Packages/Look_for_packages.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'pandas' already in sys.modules\n",
-      "'numpy' already in sys.modules\n",
-      "'nptdms' already in sys.modules\n",
-      "'matplotlib' already in sys.modules\n",
+      "can't find the 'pandas' module\n",
+      "can't find the 'numpy' module\n",
+      "can't find the 'nptdms' module\n",
+      "can't find the 'matplotlib' module\n",
       "'pathlib' already in sys.modules\n"
      ]
     }
