--- a/tests/Load_TDMS_makePlots.ipynb
+++ b/tests/Load_TDMS_makePlots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,30 +13,32 @@
     "sys.path.append(str(pack_path))\n",
     "#import ec_data\n",
     "#ec_data.reload()\n",
-    "from arenz_group_python import EC_Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from arenz_group_python.ec_data import EC_Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TDMS error: \"There is no channel named 'i' in group 'EC' of the TDMS file\"\n",
+      "TDMS error: \"There is no channel named 'i' in group 'EC' of the TDMS file\"\n"
+     ]
+    }
+   ],
    "source": [
-    "data = EC_Data(\"data/Steps_102346.tdms\")"
+    "data = EC_Data(\"data/Steps_102346.tdms\")\n",
+    "data1 = EC_Data(\"data/Steps_110326.tdms\")\n",
+    "data2 = EC_Data(\"data/Steps_112251.tdms\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +47,7 @@
        "<Axes: xlabel='t / s', ylabel='E / V'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +106,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "\n",
     "\n",
     "t1 = np.arange(0.0, 3.0, 0.01)\n",
