--- a/tests/Packages/Test_install.ipynb
+++ b/tests/Packages/Test_install.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -27,146 +27,34 @@
      "output_type": "stream",
      "text": [
       "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-r2nmik0r\\arenz-group-python_e18f6e933b1b4c42b927fb4920cc6ab1\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 99e9ff0ab5befc81f8e79b2f1ebfa11ae68125c3\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-5r0sk9y2\\arenz-group-python_4b99764b8cd1401088774c728b7ad63a\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit f8e0ef880b6d92a8a54b4547d3968a8f6a0d2f20\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
       "  Getting requirements to build wheel: started\n",
       "  Getting requirements to build wheel: finished with status 'done'\n",
       "  Preparing metadata (pyproject.toml): started\n",
       "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
-      "Collecting nptdms (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading npTDMS-1.9.0.tar.gz (180 kB)\n",
-      "     ---------------------------------------- 0.0/180.6 kB ? eta -:--:--\n",
-      "     ------------------------------------- 180.6/180.6 kB 10.7 MB/s eta 0:00:00\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "  Preparing metadata (pyproject.toml): started\n",
-      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
-      "Collecting matplotlib (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading matplotlib-3.9.1-cp311-cp311-win_amd64.whl.metadata (11 kB)\n",
-      "Collecting pathlib (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading pathlib-1.0.1-py3-none-any.whl.metadata (5.1 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading contourpy-1.2.1-cp311-cp311-win_amd64.whl.metadata (5.8 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading fonttools-4.53.0-cp311-cp311-win_amd64.whl.metadata (165 kB)\n",
-      "     ---------------------------------------- 0.0/165.5 kB ? eta -:--:--\n",
-      "     -------------------------------------- 165.5/165.5 kB 9.7 MB/s eta 0:00:00\n",
-      "Collecting kiwisolver>=1.3.1 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading kiwisolver-1.4.5-cp311-cp311-win_amd64.whl.metadata (6.5 kB)\n",
-      "Collecting numpy>=1.23 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading numpy-2.0.0-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
-      "     ---------------------------------------- 0.0/60.9 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 60.9/60.9 kB ? eta 0:00:00\n",
+      "Requirement already satisfied: nptdms in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.9.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.9.1)\n",
+      "Requirement already satisfied: pathlib in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.0.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (4.53.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.4.5)\n",
+      "Requirement already satisfied: numpy>=1.23 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.0.0)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (24.1)\n",
-      "Collecting pillow>=8 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading pillow-10.4.0-cp311-cp311-win_amd64.whl.metadata (9.3 kB)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Downloading pyparsing-3.1.2-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (10.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.1.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n",
-      "Downloading matplotlib-3.9.1-cp311-cp311-win_amd64.whl (8.0 MB)\n",
-      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.6/8.0 MB 12.0 MB/s eta 0:00:01\n",
-      "   ----- ---------------------------------- 1.1/8.0 MB 11.8 MB/s eta 0:00:01\n",
-      "   -------- ------------------------------- 1.7/8.0 MB 11.7 MB/s eta 0:00:01\n",
-      "   ---------- ----------------------------- 2.2/8.0 MB 11.6 MB/s eta 0:00:01\n",
-      "   ------------- -------------------------- 2.7/8.0 MB 11.6 MB/s eta 0:00:01\n",
-      "   ---------------- ----------------------- 3.3/8.0 MB 11.6 MB/s eta 0:00:01\n",
-      "   ------------------- -------------------- 3.8/8.0 MB 12.2 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 4.4/8.0 MB 12.1 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 4.9/8.0 MB 12.0 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 5.4/8.0 MB 12.0 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 6.0/8.0 MB 11.9 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 6.5/8.0 MB 11.9 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 7.0/8.0 MB 11.8 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 7.6/8.0 MB 11.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  8.0/8.0 MB 11.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 8.0/8.0 MB 11.3 MB/s eta 0:00:00\n",
-      "Downloading pathlib-1.0.1-py3-none-any.whl (14 kB)\n",
-      "Downloading contourpy-1.2.1-cp311-cp311-win_amd64.whl (188 kB)\n",
-      "   ---------------------------------------- 0.0/188.2 kB ? eta -:--:--\n",
-      "   --------------------------------------- 188.2/188.2 kB 11.1 MB/s eta 0:00:00\n",
-      "Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Downloading fonttools-4.53.0-cp311-cp311-win_amd64.whl (2.2 MB)\n",
-      "   ---------------------------------------- 0.0/2.2 MB ? eta -:--:--\n",
-      "   --------- ------------------------------ 0.5/2.2 MB 10.9 MB/s eta 0:00:01\n",
-      "   ------------------- -------------------- 1.1/2.2 MB 11.2 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 1.6/2.2 MB 11.3 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 2.1/2.2 MB 12.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.2/2.2 MB 10.8 MB/s eta 0:00:00\n",
-      "Downloading kiwisolver-1.4.5-cp311-cp311-win_amd64.whl (56 kB)\n",
-      "   ---------------------------------------- 0.0/56.1 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 56.1/56.1 kB ? eta 0:00:00\n",
-      "Downloading numpy-2.0.0-cp311-cp311-win_amd64.whl (16.5 MB)\n",
-      "   ---------------------------------------- 0.0/16.5 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 0.6/16.5 MB 13.1 MB/s eta 0:00:02\n",
-      "   -- ------------------------------------- 1.2/16.5 MB 12.3 MB/s eta 0:00:02\n",
-      "   ---- ----------------------------------- 1.7/16.5 MB 12.0 MB/s eta 0:00:02\n",
-      "   ----- ---------------------------------- 2.2/16.5 MB 11.9 MB/s eta 0:00:02\n",
-      "   ------ --------------------------------- 2.8/16.5 MB 11.9 MB/s eta 0:00:02\n",
-      "   -------- ------------------------------- 3.3/16.5 MB 11.8 MB/s eta 0:00:02\n",
-      "   --------- ------------------------------ 3.9/16.5 MB 11.7 MB/s eta 0:00:02\n",
-      "   --------- ------------------------------ 3.9/16.5 MB 10.8 MB/s eta 0:00:02\n",
-      "   ----------- ---------------------------- 4.8/16.5 MB 11.4 MB/s eta 0:00:02\n",
-      "   ------------- -------------------------- 5.5/16.5 MB 12.1 MB/s eta 0:00:01\n",
-      "   -------------- ------------------------- 6.0/16.5 MB 12.0 MB/s eta 0:00:01\n",
-      "   --------------- ------------------------ 6.5/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 7.1/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 7.6/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ------------------- -------------------- 8.2/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 8.7/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 9.2/16.5 MB 11.8 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 9.8/16.5 MB 11.8 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 10.3/16.5 MB 11.7 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 10.9/16.5 MB 11.7 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 11.4/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 11.6/16.5 MB 11.7 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 11.6/16.5 MB 11.7 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 12.1/16.5 MB 10.9 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 12.8/16.5 MB 11.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 14.1/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 14.6/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 15.2/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 15.7/16.5 MB 11.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  16.2/16.5 MB 11.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  16.5/16.5 MB 11.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 16.5/16.5 MB 11.3 MB/s eta 0:00:00\n",
-      "Downloading pillow-10.4.0-cp311-cp311-win_amd64.whl (2.6 MB)\n",
-      "   ---------------------------------------- 0.0/2.6 MB ? eta -:--:--\n",
-      "   ------- -------------------------------- 0.5/2.6 MB 10.2 MB/s eta 0:00:01\n",
-      "   ---------------- ----------------------- 1.0/2.6 MB 13.1 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 1.6/2.6 MB 12.5 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 2.1/2.6 MB 12.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  2.5/2.6 MB 11.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.6/2.6 MB 11.6 MB/s eta 0:00:00\n",
-      "Downloading pyparsing-3.1.2-py3-none-any.whl (103 kB)\n",
-      "   ---------------------------------------- 0.0/103.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 103.2/103.2 kB ? eta 0:00:00\n",
-      "Building wheels for collected packages: arenz_group_python, nptdms\n",
-      "  Building wheel for arenz_group_python (pyproject.toml): started\n",
-      "  Building wheel for arenz_group_python (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.1-py3-none-any.whl size=4617 sha256=4595604e1eaa1ea63f8e6286f8c9dc5c5d088779c43ef50a5be09c863a3e13af\n",
-      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-bp2f6moq\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
-      "  Building wheel for nptdms (pyproject.toml): started\n",
-      "  Building wheel for nptdms (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for nptdms: filename=npTDMS-1.9.0-py3-none-any.whl size=107843 sha256=21990fdc89efe58ad9bc57873a5049c3ea9e069a56416533dbbee3103f5d33e5\n",
-      "  Stored in directory: c:\\users\\gustav.wiberg\\appdata\\local\\pip\\cache\\wheels\\27\\8e\\a7\\be537457401c9317f456a4834da804161a190eacd286c1a116\n",
-      "Successfully built arenz_group_python nptdms\n",
-      "Installing collected packages: pathlib, pyparsing, pillow, numpy, kiwisolver, fonttools, cycler, nptdms, contourpy, matplotlib, arenz_group_python\n",
-      "Successfully installed arenz_group_python-0.0.1 contourpy-1.2.1 cycler-0.12.1 fonttools-4.53.0 kiwisolver-1.4.5 matplotlib-3.9.1 nptdms-1.9.0 numpy-2.0.0 pathlib-1.0.1 pillow-10.4.0 pyparsing-3.1.2\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-r2nmik0r\\arenz-group-python_e18f6e933b1b4c42b927fb4920cc6ab1'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-5r0sk9y2\\arenz-group-python_4b99764b8cd1401088774c728b7ad63a'\n"
      ]
     }
    ],
