--- a/tests/Packages/Install_basePackages.ipynb
+++ b/tests/Packages/Install_basePackages.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (2.0.0)\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-2.2.2-cp311-cp311-win_amd64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from pandas) (2.0.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from pandas) (2.9.0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Downloading tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Downloading pandas-2.2.2-cp311-cp311-win_amd64.whl (11.6 MB)\n",
+      "   ---------------------------------------- 0.0/11.6 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.2/11.6 MB 4.1 MB/s eta 0:00:03\n",
+      "   - -------------------------------------- 0.6/11.6 MB 6.1 MB/s eta 0:00:02\n",
+      "   --- ------------------------------------ 1.0/11.6 MB 7.4 MB/s eta 0:00:02\n",
+      "   ----- ---------------------------------- 1.6/11.6 MB 8.4 MB/s eta 0:00:02\n",
+      "   ------- -------------------------------- 2.1/11.6 MB 9.1 MB/s eta 0:00:02\n",
+      "   -------- ------------------------------- 2.6/11.6 MB 9.7 MB/s eta 0:00:01\n",
+      "   ---------- ----------------------------- 3.1/11.6 MB 9.9 MB/s eta 0:00:01\n",
+      "   ------------ --------------------------- 3.7/11.6 MB 10.2 MB/s eta 0:00:01\n",
+      "   -------------- ------------------------- 4.2/11.6 MB 10.3 MB/s eta 0:00:01\n",
+      "   ---------------- ----------------------- 4.7/11.6 MB 10.4 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 5.3/11.6 MB 10.5 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 5.8/11.6 MB 10.6 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 6.4/11.6 MB 10.7 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 6.9/11.6 MB 10.8 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 7.4/11.6 MB 10.8 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 8.0/11.6 MB 10.8 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 8.5/11.6 MB 10.9 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 9.0/11.6 MB 11.1 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 9.6/11.6 MB 11.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 10.1/11.6 MB 11.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 10.7/11.6 MB 11.7 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 11.2/11.6 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  11.6/11.6 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.6/11.6 MB 11.5 MB/s eta 0:00:00\n",
+      "Downloading pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
+      "   ---------------------------------------- 0.0/505.5 kB ? eta -:--:--\n",
+      "   ------------------------------------- - 481.3/505.5 kB 14.7 MB/s eta 0:00:01\n",
+      "   --------------------------------------- 505.5/505.5 kB 10.5 MB/s eta 0:00:00\n",
+      "Downloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
+      "   ---------------------------------------- 0.0/345.4 kB ? eta -:--:--\n",
+      "   --------------------------------------- 345.4/345.4 kB 10.8 MB/s eta 0:00:00\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.2 pytz-2024.1 tzdata-2024.1\n",
+      "Requirement already satisfied: nptdms in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (1.9.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from nptdms) (2.0.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (3.9.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (4.53.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: numpy>=1.23 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (2.0.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (24.1)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (10.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (3.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib) (2.9.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Requirement already satisfied: pathlib in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (1.0.1)\n",
+      "Collecting scipy\n",
+      "  Downloading scipy-1.14.0-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.8 kB ? eta -:--:--\n",
+      "     ------ --------------------------------- 10.2/60.8 kB ? eta -:--:--\n",
+      "     ------------------- ------------------ 30.7/60.8 kB 262.6 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 60.8/60.8 kB 404.2 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy<2.3,>=1.23.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from scipy) (2.0.0)\n",
+      "Downloading scipy-1.14.0-cp311-cp311-win_amd64.whl (44.7 MB)\n",
+      "   ---------------------------------------- 0.0/44.7 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.3/44.7 MB 5.7 MB/s eta 0:00:08\n",
+      "    --------------------------------------- 0.8/44.7 MB 10.2 MB/s eta 0:00:05\n",
+      "   - -------------------------------------- 1.4/44.7 MB 10.7 MB/s eta 0:00:05\n",
+      "   - -------------------------------------- 1.8/44.7 MB 10.5 MB/s eta 0:00:05\n",
+      "   -- ------------------------------------- 2.3/44.7 MB 10.7 MB/s eta 0:00:04\n",
+      "   -- ------------------------------------- 2.9/44.7 MB 10.8 MB/s eta 0:00:04\n",
+      "   --- ------------------------------------ 3.4/44.7 MB 10.9 MB/s eta 0:00:04\n",
+      "   --- ------------------------------------ 4.0/44.7 MB 11.0 MB/s eta 0:00:04\n",
+      "   ---- ----------------------------------- 4.5/44.7 MB 11.0 MB/s eta 0:00:04\n",
+      "   ---- ----------------------------------- 5.0/44.7 MB 11.1 MB/s eta 0:00:04\n",
+      "   ---- ----------------------------------- 5.6/44.7 MB 11.2 MB/s eta 0:00:04\n",
+      "   ----- ---------------------------------- 6.2/44.7 MB 11.2 MB/s eta 0:00:04\n",
+      "   ----- ---------------------------------- 6.7/44.7 MB 11.2 MB/s eta 0:00:04\n",
+      "   ------ --------------------------------- 7.2/44.7 MB 11.2 MB/s eta 0:00:04\n",
+      "   ------ --------------------------------- 7.8/44.7 MB 11.3 MB/s eta 0:00:04\n",
+      "   ------- -------------------------------- 8.3/44.7 MB 11.5 MB/s eta 0:00:04\n",
+      "   ------- -------------------------------- 8.8/44.7 MB 11.5 MB/s eta 0:00:04\n",
+      "   -------- ------------------------------- 9.4/44.7 MB 11.5 MB/s eta 0:00:04\n",
+      "   -------- ------------------------------- 9.9/44.7 MB 11.5 MB/s eta 0:00:04\n",
+      "   --------- ------------------------------ 10.5/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   --------- ------------------------------ 11.0/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ---------- ----------------------------- 11.5/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ---------- ----------------------------- 12.1/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ----------- ---------------------------- 12.6/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ----------- ---------------------------- 13.1/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ------------ --------------------------- 13.7/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   ------------ --------------------------- 14.2/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   ------------- -------------------------- 14.7/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   ------------- -------------------------- 15.3/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   -------------- ------------------------- 15.8/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   -------------- ------------------------- 16.4/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   --------------- ------------------------ 16.9/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   --------------- ------------------------ 17.4/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ---------------- ----------------------- 18.0/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ---------------- ----------------------- 18.5/44.7 MB 11.7 MB/s eta 0:00:03\n",
+      "   ----------------- ---------------------- 19.0/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   ----------------- ---------------------- 19.6/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   ----------------- ---------------------- 20.1/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   ------------------ --------------------- 20.6/44.7 MB 11.9 MB/s eta 0:00:03\n",
+      "   ------------------ --------------------- 21.2/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 21.7/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 22.3/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   -------------------- ------------------- 22.8/44.7 MB 11.7 MB/s eta 0:00:02\n",
+      "   -------------------- ------------------- 23.3/44.7 MB 11.7 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 23.7/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 23.7/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 23.8/44.7 MB 10.7 MB/s eta 0:00:02\n",
+      "   ---------------------- ----------------- 24.8/44.7 MB 11.1 MB/s eta 0:00:02\n",
+      "   ----------------------- ---------------- 25.9/44.7 MB 11.7 MB/s eta 0:00:02\n",
+      "   ----------------------- ---------------- 26.6/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ------------------------ --------------- 27.1/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ------------------------ --------------- 27.6/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ------------------------- -------------- 28.2/44.7 MB 11.7 MB/s eta 0:00:02\n",
+      "   ------------------------- -------------- 28.7/44.7 MB 11.7 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 29.2/44.7 MB 11.7 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 29.8/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   --------------------------- ------------ 30.3/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   --------------------------- ------------ 30.8/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 31.4/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 31.9/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 32.5/44.7 MB 11.9 MB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 33.0/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 33.5/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 34.1/44.7 MB 13.4 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 34.6/44.7 MB 12.9 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 35.2/44.7 MB 12.6 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 35.7/44.7 MB 12.3 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 36.2/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 36.8/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 37.3/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 37.9/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 38.4/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 38.9/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 39.4/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 40.0/44.7 MB 11.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 40.5/44.7 MB 11.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 41.1/44.7 MB 11.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 41.6/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 42.1/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 42.7/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 43.2/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  43.6/44.7 MB 11.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  44.3/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  44.7/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  44.7/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  44.7/44.7 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 44.7/44.7 MB 10.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: scipy\n",
+      "Successfully installed scipy-1.14.0\n"
+     ]
+    }
+   ],
    "source": [
     "#req_packages = [\"pandas\",\"numpy\",\"nptdms\",\"matplotlib\",\"pathlib\"]\n",
     "\n",
@@ -31,7 +195,9 @@
     "!{sys.executable} -m pip install pandas\n",
     "!{sys.executable} -m pip install nptdms\n",
     "!{sys.executable} -m pip install matplotlib\n",
-    "!{sys.executable} -m pip install pathlib\n"
+    "!{sys.executable} -m pip install pathlib\n",
+    "!{sys.executable} -m pip install scipy\n",
+    "\n"
    ]
   },
   {
@@ -193,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
